# CodeGit

./: .gitignore  APLICACAO_FUNCIONANDO.md  DEMO_STATUS.md  DESIGN_ENHANCEMENT_REPORT.md  DIMENSIONING_FIXES.md  README.md  WINDOWS_COMPILATION_SOLUTION.md  check_sqlite.sh  index.html  package-lock.json  package.json  start-codegit.ps1
src/: Account.css  Account.tsx  App.css  App.tsx  BranchManager.css  BranchManager.tsx  CommitHistory.css  CommitHistory.tsx  ConflictResolver.css  ConflictResolver.tsx  Dashboard.css  Dashboard.tsx  DiffViewer.css  DiffViewer.tsx  MergeInteractive.css  MergeInteractive.tsx  RepositoryCreator.css  RepositoryCreator.tsx  Settings.css  Settings.tsx  button-alignment-fixes.css  contextMenu.css  contextMenu.ts  design-system.css  enhanced-design-system.css  main.tsx  micro-interactions.css  responsive.css  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src-tauri/src/commands/: database.rs
src/components/: Accessibility.tsx  ErrorBoundary.tsx  LoadingStates.tsx
src/components/bulk/: BulkOperationsPanel.css  BulkOperationsPanel.tsx
src/components/debug/: DataLocationDebug.tsx  UserDataDebug.tsx
src/components/layout/: DetailsPanel.css  DetailsPanel.tsx  Header.css  Header.tsx  MainLayout.css  MainLayout.tsx  MainWorkspace.css  MainWorkspace.tsx  RepositorySidebar.css  RepositorySidebar.tsx
src/components/onboarding/: UserOnboarding.css  UserOnboarding.tsx  UserSelection.css  UserSelection.tsx
src/components/repository/: RepositoryDiscoveryPanel.css  (+1 more)
src/contexts/: AppStateContext.tsx
src/hooks/: useBulkOperations.ts  useCache.ts  useRepositoryDiscovery.ts  useSmartNotifications.ts
src/services/: BulkOperationsService.ts  CacheService.ts  RepositoryDiscoveryService.ts  database.ts
src/types/: operations.ts  state.ts
(+4 files in other folders)
