[package]
name = "codegit"
version = "0.1.0"
description = "Modern Git Client built with Tauri and React"
authors = ["CodeGit Team"]
license = ""
repository = ""
default-run = "codegit"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "fs-write-file", "dialog-open", "shell-open", "fs-remove-file", "fs-read-dir", "fs-create-dir", "dialog-save", "fs-exists", "fs-read-file", "fs-remove-dir"] }
git2 = "0.19"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
